Update template to 1.14.1